--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Traveling</title>
   </head>
   <body>
+    <div id=wrapper>
     <!-- ここからヘッダー -->
     <div class="header">
       <div class="header-country">
@@ -464,5 +465,6 @@
                   </div>
                 </div>
                 </div>
+      </div>
     </body>
 </html>
