--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
               </div>
               <p class="recommend-contents">韓国と言えばグルメ！プルコギ,チーズタッカルビ,トッポギ,サムギョプサルなど本場のグルメを堪能できます.ただし店員さんの言う辛くないは信用できません.</p>
             </div>
+            <div class="merit-demerit">
             <div class="merit">
               <div class="merit-title">
                 <h1>韓国のココが良かった</h1>
@@ -93,6 +94,8 @@
               <p>2. 日本からめちゃくちゃ近い(セントレアから約1.5時間で到着)</p>
               <p>3. 伝統的な建物がきれい(韓流映画でよく目にするような街並み)</p>
             </div>
+          </div>
+          <div class="merit-demerit">
             <div class="demerit">
               <div class="demerit-title">
                 <h1>韓国のココが悪かった</h1>
@@ -102,6 +105,7 @@
               <p>3. 長期滞在には向いていない(すぐにやることが無くなってしまう)</p>
             </div>
           </div>
+        </div>
           <div onclick="obj=document.getElementById('open1').style; obj.display=(obj.display=='none')?'block':'none';">
             <a style="cursor:pointer;" class="btn">▼ 詳細を閉じる</a>
           </div>
@@ -151,6 +155,7 @@
               </div>
               <p class="recommend-contents">他にもナイトズーやセントーサアイランドなど盛りだくさんで遊びつくせないほどの観光の島です.(写真はウォーターショー)</p>
             </div>
+            <div class="merit-demerit">
             <div class="merit">
               <div class="merit-title">
                 <h1>シンガポールのココが良かった</h1>
@@ -159,6 +164,8 @@
               <p>2. 小さい国なのでスムーズに周りやすい(淡路島の面積と同じくらい)</p>
               <p>3. 当たりの料理はめちゃくちゃおいしい(特に中華系は本格的で◎)</p>
             </div>
+          </div>
+          <div class="merit-demerit">
             <div class="demerit">
               <div class="demerit-title">
                 <h1>シンガポールのココが悪かった</h1>
@@ -167,6 +174,7 @@
               <p>2. 暑くて湿度が高いのですぐばてる(日本の蒸し暑さなんてかわいいくらい)</p>
               <p>3. 物価が日本と比べても高い(ローカルフードとかはお値打ちに食べられる)</p>
             </div>
+          </div>
           </div>
           <div onclick="obj=document.getElementById('open2').style; obj.display=(obj.display=='none')?'block':'none';">
             <a style="cursor:pointer;" class="btn">▼ 詳細を閉じる</a>
@@ -216,6 +224,7 @@
                 </div>
                 <p class="recommend-contents">友達と少しふざけようとしていたらセキュリティの人が厳つすぎて萎縮しました．日本では出来ないシューティングをぜひ.</p>
               </div>
+              <div class="merit-demerit">
               <div class="merit">
                 <div class="merit-title">
                   <h1>グアムのココが良かった</h1>
@@ -224,6 +233,8 @@
                 <p>2. ご飯(特に肉)が最高にうまい(量がボリューミーでアメリカンサイズ)</p>
                 <p>3. ビーチやプールが綺麗(イパオビーチ,タモンビーチ,ガンビーチなど)</p>
               </div>
+            </div>
+            <div class="merit-demerit">
               <div class="demerit">
                 <div class="demerit-title">
                   <h1>グアムのココが悪かった</h1>
@@ -232,6 +243,7 @@
                 <p>2. 観光したい人には不向き(かも)(観光巡りというよりかはのんびり)</p>
                 <p>3. 天気悪かった時の絶望感がすごい(基本的に海必須だから晴れ願い)</p>
               </div>
+            </div>
             </div>
             <div onclick="obj=document.getElementById('open3').style; obj.display=(obj.display=='none')?'block':'none';">
               <a style="cursor:pointer;" class="btn">▼ 詳細を閉じる</a>
@@ -281,27 +293,31 @@
                   </div>
                   <p class="recommend-contents">海中トンネルが有名のリプレイアクアリウム.個人的にはシンガポールのセントーサアイランドの水族館の方が好きです.</p>
                 </div>
-                <div class="merit">
-                  <div class="merit-title">
-                    <h1>カナダのココが良かった</h1>
+                <div class="merit-demerit">
+                  <div class="merit">
+                    <div class="merit-title">
+                      <h1>カナダのココが良かった</h1>
+                    </div>
+                    <p>1. 色々な文化を楽しめる(多民族国家)(料理も世界中のものが味わえる)</p>
+                    <p>2. 観光地がたくさんあり飽きることがない(メジャーリーグ,市場など)</p>
+                    <p>3. とにかく治安がいい,良い人が多い(見た目が厳つくても全員良い人)</p>
                   </div>
-                  <p>1. 色々な文化を楽しめる(多民族国家)(料理も世界中のものが味わえる)</p>
-                  <p>2. 観光地がたくさんあり飽きることがない(メジャーリーグ,市場など)</p>
-                  <p>3. とにかく治安がいい,良い人が多い(見た目が厳つくても全員良い人)</p>
                 </div>
-                <div class="demerit">
-                  <div class="demerit-title">
-                    <h1>カナダのココが悪かった</h1>
+                <div class="merit-demerit">
+                  <div class="demerit">
+                    <div class="demerit-title">
+                      <h1>カナダのココが悪かった</h1>
+                    </div>
+                    <p>1. 広すぎて一つの都市しかいけない(大きさのスケールが全て桁違い)</p>
+                    <p>2. マリファナの臭いがよくする(マリファナは合法,決まってる人がいる)</p>
+                    <p>3. 税とチップで外食代がすごい(税で10%ちょい,チップで15%くらい)</p>
                   </div>
-                  <p>1. 広すぎて一つの都市しかいけない(大きさのスケールが全て桁違い)</p>
-                  <p>2. マリファナの臭いがよくする(マリファナは合法,決まってる人がいる)</p>
-                  <p>3. 税とチップで外食代がすごい(税で10%ちょい,チップで15%くらい)</p>
+                </div>
+                </div>
+                <div onclick="obj=document.getElementById('open4').style; obj.display=(obj.display=='none')?'block':'none';">
+                  <a style="cursor:pointer;" class="btn">▼ 詳細を閉じる</a>
                 </div>
               </div>
-              <div onclick="obj=document.getElementById('open4').style; obj.display=(obj.display=='none')?'block':'none';">
-                <a style="cursor:pointer;" class="btn">▼ 詳細を閉じる</a>
-              </div>
-            </div>
             <!--// 折り畳まれ部分 -->
 
             <div class="country-name">
@@ -344,16 +360,19 @@
                           <p class="recommend-title2">タイムズスクエア</p>
                         </div>
                     </div>
-                    <p class="recommend-contents">世界の中心タイムズスクエア.昼の方が空いているイメージ.夜はほとんど身動きが取れません.</p>
+                    <p class="recommend-contents">世界の中心タイムズスクエア.昼の方が空いているイメージ.夜はほとんど身動きが取れません.近くにあるブロードウェイも一見の価値あり.</p>
                   </div>
+                  <div class="merit-demerit">
                   <div class="merit">
                     <div class="merit-title">
                       <h1>アメリカのココが良かった</h1>
                     </div>
-                    <p>1. とにかく見どころが多く,滞在に飽きない(自由の女神,ブロードウェイなど)</p>
-                    <p>2. 一つ一つの見どころのインパクトが強い(一度はTVで見たことがあるもの)</p>
-                    <p>3. ファッションやグルメの最先端(とてつもなくおしゃれでとてつもなく高い)</p>
+                    <p>1. とにかく見どころが多く,滞在に飽きない(自由の女神など)</p>
+                    <p>2. 一つ一つのインパクトが強い(一度はTVで見たことがある)</p>
+                    <p>3. ファッション,グルメの最先端(とてつもなくおしゃれで高い)</p>
                   </div>
+                </div>
+                <div class="merit-demerit">
                   <div class="demerit">
                     <div class="demerit-title">
                       <h1>アメリカのココが悪かった</h1>
@@ -362,6 +381,7 @@
                     <p>2. 電車がめちゃくちゃ難しい(友達いなかったら無理だったと思う)</p>
                     <p>3. 物価が恐ろしいほど高い(普通のバーで一杯酒飲んだら3000円)</p>
                   </div>
+                </div>
                 </div>
                 <div onclick="obj=document.getElementById('open5').style; obj.display=(obj.display=='none')?'block':'none';">
                   <a style="cursor:pointer;" class="btn">▼ 詳細を閉じる</a>
@@ -411,6 +431,7 @@
                       </div>
                       <p class="recommend-contents">タイの離島でフェリーなどで行ける.グアムの海に勝るとも劣らないほどの透明度.シューティングやパラセーリングもできました.</p>
                     </div>
+                    <div class="merit-demerit">
                     <div class="merit">
                       <div class="merit-title">
                         <h1>タイのココが良かった</h1>
@@ -419,6 +440,8 @@
                       <p>2. 物価が比べ物にならないほど安い(タクシーは6分の1くらい)</p>
                       <p>3. 超がつくほどの親日国(日本出身というと色々話してくれる)</p>
                     </div>
+                  </div>
+                  <div class="merit-demerit">
                     <div class="demerit">
                       <div class="demerit-title">
                         <h1>タイのココが悪かった</h1>
@@ -428,11 +451,12 @@
                       <p>3. 野犬が多くて怖すぎる(初日の夜に追っかけられて襲われかけた)</p>
                     </div>
                   </div>
+                </div>
                   <div onclick="obj=document.getElementById('open6').style; obj.display=(obj.display=='none')?'block':'none';">
                     <a style="cursor:pointer;" class="btn">▼ 詳細を閉じる</a>
                   </div>
-
                 </div>
+
                 <!--// 折り畳まれ部分 -->
 
                 <!--ここにmessage代入-->
@@ -465,6 +489,6 @@
                   </div>
                 </div>
                 </div>
-      </div>
+              </div>
     </body>
 </html>
