--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="contents">
       <div class="top-message">
         <div class="top-message1">
-        <p>僕が今までに行った国のおすすめポイント,メリット,デメリットを紹介します.</p>
+        <p>僕が今までに行った国々のおすすめポイント,メリット,デメリットを紹介します.</p>
         <p>ぜひ旅行に行くときの参考にしてみてください！</p>
       </div>
     </div>
