--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
               <div class="merit-title">
                 <h1>韓国のココが良かった</h1>
               </div>
-              <p>1. 食べ物がまじおいしい(プルコギ,チーズタッカルビ,トッポギ)</p>
-              <p>2. 日本からめちゃくちゃ近い(セントレアから約1.5時間で到着)</p>
-              <p>3. 伝統的な建物がきれい(韓流映画でよく目にするような街並み)</p>
+              <p>1. 食べ物がまじおいしい(プルコギ,トッポギなど)</p>
+              <p>2. 日本からめちゃくちゃ近い(約2時間で到着)</p>
+              <p>3. 伝統的な建物がきれい(韓流映画でよく見るやつ)</p>
             </div>
           </div>
           <div class="merit-demerit">
@@ -101,9 +101,9 @@
               <div class="demerit-title">
                 <h1>韓国のココが悪かった</h1>
               </div>
-              <p>1. ショッピングが女の子向き(メンズのものはあまり売っていない)</p>
-              <p>2. ブランドショップが大体偽物(正直に教えてくれるだけまだまし)</p>
-              <p>3. 長期滞在には向いていない(すぐにやることが無くなってしまう)</p>
+              <p>1. ショッピングが女の子向き(メンズのものは少ない)</p>
+              <p>2. ブランドショップが大体偽物(正直に教えてくれる)</p>
+              <p>3. 長期滞在には向かない(やることが無くなってしまう)</p>
             </div>
           </div>
         </div>
@@ -161,9 +161,9 @@
               <div class="merit-title">
                 <h1>シンガポールのココが良かった</h1>
               </div>
-              <p>1. とにかく至る所が映えスポット(空港は世界一の美しさに選ばれた)</p>
-              <p>2. 小さい国なのでスムーズに周りやすい(淡路島の面積と同じくらい)</p>
-              <p>3. 当たりの料理はめちゃくちゃおいしい(特に中華系は本格的で◎)</p>
+              <p>1. とにかく至る所が映えスポット(空港は世界一の美しさ)</p>
+              <p>2. 小さい国なのでスムーズに観光○(淡路島と同じくらい)</p>
+              <p>3. 当たりの料理はおいしい(特に中華系は本格的で◎)</p>
             </div>
           </div>
           <div class="merit-demerit">
@@ -171,9 +171,9 @@
               <div class="demerit-title">
                 <h1>シンガポールのココが悪かった</h1>
               </div>
-              <p>1. 料理に当たりはずれがある(一食目で獣臭の肉の大外れを引きました)</p>
-              <p>2. 暑くて湿度が高いのですぐばてる(日本の蒸し暑さなんてかわいいくらい)</p>
-              <p>3. 物価が日本と比べても高い(ローカルフードとかはお値打ちに食べられる)</p>
+              <p>1. 料理に当たりはずれがある(一食目で大外れを引いた)</p>
+              <p>2. 暑くて湿度が高いのですぐばてる(スコールもある)</p>
+              <p>3. 物価が日本と比べて高い(ローカルフードはお値打ち)</p>
             </div>
           </div>
           </div>
@@ -230,9 +230,9 @@
                 <div class="merit-title">
                   <h1>グアムのココが良かった</h1>
                 </div>
-                <p>1. アクティビティの種類がとても豊富(銃,マリン,水陸乗用車など色々)</p>
-                <p>2. ご飯(特に肉)が最高にうまい(量がボリューミーでアメリカンサイズ)</p>
-                <p>3. ビーチやプールが綺麗(イパオビーチ,タモンビーチ,ガンビーチなど)</p>
+                <p>1. アクティビティがとても豊富(銃,マリン,水陸乗用車など)</p>
+                <p>2. ご飯(特に肉系)が最高にうまい(量がアメリカンサイズ)</p>
+                <p>3. ビーチやプールが綺麗(イパオビーチ,タモンビーチなど)</p>
               </div>
             </div>
             <div class="merit-demerit">
@@ -240,9 +240,9 @@
                 <div class="demerit-title">
                   <h1>グアムのココが悪かった</h1>
                 </div>
-                <p>1. 日本人が多すぎて海外感が少ない(日本語で話しかけてくるレベル)</p>
-                <p>2. 観光したい人には不向き(かも)(観光巡りというよりかはのんびり)</p>
-                <p>3. 天気悪かった時の絶望感がすごい(基本的に海必須だから晴れ願い)</p>
+                <p>1. 日本人が多すぎて海外感が少ない(現地民よりも？)</p>
+                <p>2. 観光したい人には不向き(観光巡りよりものんびり)</p>
+                <p>3. 天気悪かった時の絶望感(海必須だから晴れ願い)</p>
               </div>
             </div>
             </div>
@@ -299,9 +299,9 @@
                     <div class="merit-title">
                       <h1>カナダのココが良かった</h1>
                     </div>
-                    <p>1. 色々な文化を楽しめる(多民族国家)(料理も世界中のものが味わえる)</p>
-                    <p>2. 観光地がたくさんあり飽きることがない(メジャーリーグ,市場など)</p>
-                    <p>3. とにかく治安がいい,良い人が多い(見た目が厳つくても全員良い人)</p>
+                    <p>1. 色々な文化を楽しめる(料理も世界中のものがある)</p>
+                    <p>2. 観光地がたくさんあり飽きない(メジャーリーグとか)</p>
+                    <p>3. とにかく治安がいい,良い人が多い(すごい平和)</p>
                   </div>
                 </div>
                 <div class="merit-demerit">
@@ -309,9 +309,9 @@
                     <div class="demerit-title">
                       <h1>カナダのココが悪かった</h1>
                     </div>
-                    <p>1. 広すぎて一つの都市しかいけない(大きさのスケールが全て桁違い)</p>
-                    <p>2. マリファナの臭いがよくする(マリファナは合法,決まってる人がいる)</p>
-                    <p>3. 税とチップで外食代がすごい(税で10%ちょい,チップで15%くらい)</p>
+                    <p>1. 広すぎて一つの都市しかいけない(スケールが全て桁違い)</p>
+                    <p>2. マリファナの臭いがよくする(マリファナは合法だけど)</p>
+                    <p>3. 税とチップで外食代がすごい(合計25%増しくらいかな)</p>
                   </div>
                 </div>
                 </div>
@@ -370,7 +370,7 @@
                     </div>
                     <p>1. とにかく見どころが多く,滞在に飽きない(自由の女神など)</p>
                     <p>2. 一つ一つのインパクトが強い(一度はTVで見たことがある)</p>
-                    <p>3. ファッション,グルメの最先端(とてつもなくおしゃれで高い)</p>
+                    <p>3. ファッション,グルメの最先端(とてもおしゃれで高い)</p>
                   </div>
                 </div>
                 <div class="merit-demerit">
@@ -378,9 +378,9 @@
                     <div class="demerit-title">
                       <h1>アメリカのココが悪かった</h1>
                     </div>
-                    <p>1. 治安が少し悪い(かも)(地元の友達が言っていたから多分本当)</p>
-                    <p>2. 電車がめちゃくちゃ難しい(友達いなかったら無理だったと思う)</p>
-                    <p>3. 物価が恐ろしいほど高い(普通のバーで一杯酒飲んだら3000円)</p>
+                    <p>1. 治安が少し悪い(地元の友達が言ってたから多分本当)</p>
+                    <p>2. 電車が難しい(友達いなかったら無理だったと思う)</p>
+                    <p>3. 物価が高い(普通のバーで一杯酒飲んだら3000円)</p>
                   </div>
                 </div>
                 </div>
@@ -437,9 +437,9 @@
                       <div class="merit-title">
                         <h1>タイのココが良かった</h1>
                       </div>
-                      <p>1. インスタ映えスポットであふれている(無自覚インスタ映え)</p>
-                      <p>2. 物価が比べ物にならないほど安い(タクシーは6分の1くらい)</p>
-                      <p>3. 超がつくほどの親日国(日本出身というと色々話してくれる)</p>
+                      <p>1. インスタ映えスポットだらけ(無自覚インスタ映え)</p>
+                      <p>2. 物価が比べ物にならない(タクシーは6分の1くらい)</p>
+                      <p>3. かなり親日国(日本出身というと色々話してくれる)</p>
                     </div>
                   </div>
                   <div class="merit-demerit">
@@ -447,9 +447,9 @@
                       <div class="demerit-title">
                         <h1>タイのココが悪かった</h1>
                       </div>
-                      <p>1. 街は発展途上感が否めない(スラムとかちょっと危ない雰囲気)</p>
-                      <p>2. ご飯はあまり期待できない(基本的に日本より上手いものはない)</p>
-                      <p>3. 野犬が多くて怖すぎる(初日の夜に追っかけられて襲われかけた)</p>
+                      <p>1. 街は発展途上感(スラムとかちょっと危ない雰囲気)</p>
+                      <p>2. ご飯は期待できない(日本と比べたら大体の国)</p>
+                      <p>3. 野犬が多くて怖い(初日の夜に追っかけられた)</p>
                     </div>
                   </div>
                 </div>
