--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <div class="top-message1">
         <p>僕が今までに行った国々のおすすめポイント,メリット,デメリットを紹介します.</p>
         <p>ぜひ旅行に行くときの参考にしてみてください！</p>
+        <p>ちなみに写真は全て現地に行って自分で撮ってきたものです.</p>
       </div>
     </div>
       <!-- 折り畳み展開ポインタ -->
@@ -121,7 +122,7 @@
         <div id="open2" style="display:none;clear:both;">
           <div class="recommendations">
             <div class="recommendation">
-              <div class=image>
+              <div class="image">
                 <img src="singapore-ma.jpg" class="image ma">
                 <p class="recommend-title2">マーライオン,マリーナベイサンズ</p>
               </div>
@@ -129,7 +130,7 @@
             </div>
 
             <div class="recommendation">
-              <div class=image>
+              <div class="image">
                 <img src="singapore-bay.jpg" class="image bay">
                 <p class="recommend-title2">マリーナベイサンズ-インフェニティプール</p>
               </div>
@@ -137,11 +138,35 @@
             </div>
 
             <div class="recommendation">
-              <div class=image>
+              <div class="image">
                 <img src="singapore-water.jpg" class="image water">
                 <p class="recommend-title2">スペクトグラム</p>
               </div>
               <p class="recommend-contents">他にもナイトズーやセントーサアイランドなど盛りだくさんで遊びつくせないほどの観光の島です.(写真はウォーターショー)</p>
+            </div>
+
+            <div class="recommendation1">
+              <div class="image">
+                <img src="singapore-sea.jpg" class="image sea">
+                <p class="recommend-title2">シーアクアリウム</p>
+              </div>
+              <p class="recommend-contents">8.3(m)×36(m)の大水槽があるセントーサ島の中にある水族館.今まで行った水族館の中で一番感動しました.</p>
+            </div>
+
+            <div class="recommendation1">
+              <div class="image">
+                <img src="singapore-chaina.jpg" class="image chaina">
+                <p class="recommend-title2">チャイナタウン</p>
+              </div>
+              <p class="recommend-contents">色々な国にチャイナタウンはあるけどもここのはクオリティがかなり高いと思います.街並みもきれいで料理のレベルも高い.</p>
+            </div>
+
+            <div class="recommendation1">
+              <div class="image">
+                <img src="singapore-garden.jpg" class="image garden">
+                <p class="recommend-title2">ガーデンバイザベイ</p>
+              </div>
+              <p class="recommend-contents">マリーナベイの裏側にあって,様々な施設も入ってる.夜はライトアップショーをやってて無料で見れます.</p>
             </div>
             <div class="merit-demerit">
             <div class="merit">
@@ -206,6 +231,30 @@
                 </div>
                 <p class="recommend-contents">友達と少しふざけようとしていたらセキュリティの人が厳つすぎて萎縮しました．日本では出来ないシューティングをぜひ.</p>
               </div>
+
+              <div class="recommendation1">
+                <div class=image>
+                  <img src="guam-outlet.jpg" class="image outlet">
+                  <p class="recommend-title2">プレミアムアウトレット</p>
+                </div>
+                <p class="recommend-contents">グアムのアウトレットはブランドによっては超安い.たしかトミーヒルフィガーが半額以下だった.</p>
+              </div>
+
+              <div class="recommendation1">
+                <div class=image>
+                  <img src="guam-hotel.jpg" class="image hotel">
+                  <p class="recommend-title2">オンワードビーチリゾート</p>
+                </div>
+                <p class="recommend-contents">部屋からは絶景が見れ,ウォーターパークに入ることもできます(最新アクティビティあり).ホテルの一つの選択肢としてどうぞ</p>
+              </div>
+
+              <div class="recommendation1">
+                <div class=image>
+                  <img src="guam-para.jpg" class="image para">
+                  <p class="recommend-title2">パラセーリング</p>
+                </div>
+                <p class="recommend-contents">船で沖まで出てのパラセーリング.上から見るグアムもまた美しく海は地平線まで続いていました.(そりゃそうだ)</p>
+              </div>
               <div class="merit-demerit">
               <div class="merit">
                 <div class="merit-title">
@@ -268,6 +317,30 @@
                     <p class="recommend-title2">リプレイアクアリウム</p>
                   </div>
                   <p class="recommend-contents">海中トンネルが有名のリプレイアクアリウム.個人的にはシンガポールのセントーサアイランドの水族館の方が好きです.</p>
+                </div>
+
+                <div class="recommendation1">
+                  <div class=image>
+                    <img src="toronto-obje.jpg" class="image obje">
+                    <p class="recommend-title2">イートンセンター</p>
+                  </div>
+                  <p class="recommend-contents">トロントの超大型ショッピングセンター.世界中のブランドがここに入っているといっても過言じゃない.おすすめのカナダブランドはRoots</p>
+                </div>
+
+                <div class="recommendation1">
+                  <div class=image>
+                    <img src="toronto-major.jpg" class="image major">
+                    <p class="recommend-title2">メジャーリーグ</p>
+                  </div>
+                  <p class="recommend-contents">ホットドッグとビールを両手にトロントのチームを応戦する一体感はくせになります.ブルージェイズ</p>
+                </div>
+
+                <div class="recommendation1">
+                  <div class=image>
+                    <img src="toronto-casa.jpg" class="image casa">
+                    <p class="recommend-title2">キャサロマ</p>
+                  </div>
+                  <p class="recommend-contents">トロントの大富豪が作ったお城.今では観光スポットになっていて外装はまさしくお城.ちなみに入場料取ってます.</p>
                 </div>
                 <div class="merit-demerit">
                   <div class="merit">
@@ -332,6 +405,30 @@
                     </div>
                     <p class="recommend-contents">世界の中心タイムズスクエア.昼の方が空いているイメージ.夜はほとんど身動きが取れません.近くにあるブロードウェイも一見の価値あり.</p>
                   </div>
+
+                  <div class="recommendation1">
+                    <div class=image>
+                      <img src="usa-top.jpg" class="image top">
+                      <p class="recommend-title2">トップオブザロック</p>
+                    </div>
+                    <p class="recommend-contents">エンパイアーステートビルディングが好きだけど上ったら見えないのでこっちに上りました.</p>
+                  </div>
+
+                  <div class="recommendation1">
+                    <div class=image>
+                      <img src="usa-broadway.jpg" class="image broadway">
+                      <p class="recommend-title2">ブロードウェイ</p>
+                    </div>
+                    <p class="recommend-contents">世界最高峰のミュージカル.値段も最高峰.でも払う価値ありだと思います.ちなみに見たのはアラジン</p>
+                  </div>
+
+                  <div class="recommendation1">
+                    <div class=image>
+                      <img src="usa-brige2.jpg" class="image brige2">
+                      <p class="recommend-title2">マンハッタン橋</p>
+                    </div>
+                    <p class="recommend-contents">ブルックリンブリッジの隣に掛かっている橋.こちらもクールで合わせて見ておきたい観光スポットです.</p>
+                  </div>
                   <div class="merit-demerit">
                   <div class="merit">
                     <div class="merit-title">
@@ -395,6 +492,30 @@
                       </div>
                       <p class="recommend-contents">タイの離島でフェリーなどで行ける.グアムの海に勝るとも劣らないほどの透明度.シューティングやパラセーリングもできました.</p>
                     </div>
+
+                    <div class="recommendation1">
+                      <div class=image>
+                        <img src="thailand-animal.jpg" class="image animal">
+                        <p class="recommend-title2">シラチャータイガーズー</p>
+                      </div>
+                      <p class="recommend-contents">ワニ,タイガー,ゾウ,ライオンの赤ちゃんとツーショットを撮れました.タイガーは怖かったです.</p>
+                    </div>
+
+                    <div class="recommendation1">
+                      <div class=image>
+                        <img src="thailand-kaosan.jpg" class="image kaosan">
+                        <p class="recommend-title2">カオサン通り</p>
+                      </div>
+                      <p class="recommend-contents">別名バックパッカーの聖地.食べ物やお土産屋さん,タイ式マッサージ店などなんでもある.</p>
+                    </div>
+
+                    <div class="recommendation1">
+                      <div class=image>
+                        <img src="thailand-alun.jpg" class="image alun">
+                        <p class="recommend-title2">ワットアルン</p>
+                      </div>
+                      <p class="recommend-contents">別名"暁の寺".夕方になるとライトアップされ暗闇の中に不気味かつ美しく光り輝きます.</p>
+                    </div>
                     <div class="merit-demerit">
                     <div class="merit">
                       <div class="merit-title">
@@ -428,6 +549,7 @@
                   <div class="message1">
                   <p>最後にお得に海外旅行に行く方法をまとめてみたいと思います.</p>
                   <p>海外旅行の費用の大部分を占めるのは航空券だと思います.いかに航空券をお値打ちに手に入れるかがポイントになってきます.僕はよく<a href="https://skyticket.jp/">skyticket</a>を使っています.skyticketは航空券の比較サイトで,簡単に最安チケットを比較することが出来ます.もっと費用を抑えたい方はskyticketで調べた最安チケットをその航空会社の公式HPで予約するという方法もありますが,HPが英語だったり大変な時もあります.skyticketの手数料はそこまで高くないので自分で予約する自信がない方はskyticketで予約するほうが安全でしょう.また,skyticketでは取り扱っていない航空会社も存在するのでその点は注意が必要です.ツアーで予約するときは<a href="https://www.tabikobo.com/">旅工房</a>をおすすめします.旅工房は良心的な価格とフレキシブルな対応を提供していることが多くよく使わせてもらっています.ツアー会社は航空会社からまとめて特別価格の航空券を仕入れることがあり,ツアー代金の方が航空券(自分で予約した場合の)のみの代金よりも安いなんてことも少なくありません.他にも[<a href="https://www.his-j.com/kaigai/">HIS</a>,<a href="https://www.tour.ne.jp/">トラベルコ</a>,<a href="https://www.expedia.co.jp/">Expedia</a>]などがあるのでぜひ比較してみてください.</p>
+                  <p>※skyticketや旅工房からお金をもらっているわけ(ステマ)ではありません.</p>
                 </div>
               </div>
                 <!-- ここからフッター-->
