--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </ul>
       </div>
     </div>
-    <!-- ここまでヘッダー -->
+    <!-- ここまでヘッダ -->
 
     <!-- ここからトップ-->
     <div class="top">
