--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                     <img src="toronto-obje.jpg" class="image obje">
                     <p class="recommend-title2">イートンセンター</p>
                   </div>
-                  <p class="recommend-contents">トロントの超大型ショッピングセンター.世界中のブランドがここに入っているといっても過言じゃない.おすすめのカナダブランドはRoots</p>
+                  <p class="recommend-contents">トロントの超大型ショッピングセンター.いろんなブランドが入ってる.おすすめのカナダブランドはRoots</p>
                 </div>
 
                 <div class="recommendation1">
@@ -498,7 +498,7 @@
                         <img src="thailand-animal.jpg" class="image animal">
                         <p class="recommend-title2">シラチャータイガーズー</p>
                       </div>
-                      <p class="recommend-contents">ワニ,タイガー,ゾウ,ライオンの赤ちゃんとツーショットを撮れました.タイガーは怖かったです.</p>
+                      <p class="recommend-contents">ワニ,タイガー,ゾウ,ライオンの赤ちゃんとツーショットを撮れます.タイガーは怖かった.</p>
                     </div>
 
                     <div class="recommendation1">
