--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
                     </div>
                     <p>1. 治安が少し悪い(地元の友達が言ってたから多分本当)</p>
                     <p>2. 電車が難しい(友達いなかったら無理だったと思う)</p>
-                    <p>3. 物価が高い(普通のバーで一杯酒飲んだら3000円)</p>
+                    <p>3. 物価が高い(普通のバーとかでも結構値段張る)</p>
                   </div>
                 </div>
                 </div>
