--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <title>学生が実際に旅行に行った国をリアルレビュー</title>
+    <title>学生が実際に旅行に行った国をリアルレビュー.おすすめスポットを</title>
   </head>
   <body>
     <div id=wrapper>
